# End_2_End

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  exportar_hf.py  implementation_plan.md.resolved  main.py  pyproject.toml  requirements.txt
app/: App.js  Dockerfile  Dockerfile.bundled  README.md  app.json  docker-compose.yml  metro.config.js  package-lock.json  package.json
app/backend/: logger.py  requirements.txt  server.py  server_realtime.py
app/frontend/: app.js  index.html  realtime.css  realtime.js  style.css
app/src/: ModelManager.js  styles.js  useWhisper.js
demo/: gradio_custom_ckpt.py  gradio_demo.py
docs/: .gitignore  main.tex
experiments/: slurm_train.sh  slurm_train2.sh  slurm_train_kd.sh  slurm_train_teacher.sh  test.sh  train.py  train2.py  train3_fase2.py  train_distillation.py
modelo_base_hf/: config.json  generation_config.json
scripts/: checking_cktp.py  convert_h5_to_ggml.py  exportar_hf_bin.py
src/teacher_model/: __init__.py  dataset.py
src/teacher_student_architecture/: dataset.py  distillation_model.py  model.py  teacher_model.py
training/: test.py  train.py  train3.py  train3_whisperbase.py  train_backup.py  train_kd.py  train_teacher_student.py
training/configs/: slurm_train.sh  slurm_train_single_node.sh  slurm_train_teacher_2.sh
training/data/: prep_datos.sh  preparar_datos_completo.py
